fixed alignment for mobile search box

--- a/client/public/style/App.css
+++ b/client/public/style/App.css
@@ -1,8 +1,13 @@
 #search-container{
   position: relative;
-  top: 4em;
+  top: 6em;
   flex-direction: column;
+  left: 10vw;
+  width: 80vw;
 }
+
+
+
 
 /* Medium Screens */
 @media only screen and (min-width: 40.063em) and (max-width: 64em) { 
